--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "calc-tree",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "12.7.12",
+    "typescript": "^3.6.4"
   }
 }
