--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "sourceMap": true,
-    "outDir": "dist"
+    "sourceMap": true
   }
 }
