--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "sourceMap": true
+    "sourceMap": true,
+    "outDir": "dist"
   }
 }
